<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_background"
        android:padding="16dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/bank_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:backgroundTint="@color/accent"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/bank_subtract_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest"
                android:backgroundTint="@color/accent"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/bank_borrow_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Борг"
                android:backgroundTint="@color/accent"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bank_input_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cuantity"
                android:textColorHint="#80FFFFFF"
                android:textColor="#FFFFFF"
                android:backgroundTint="#4DFFFFFF" />

            <EditText
                android:id="@+id/bank_input_info_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/info"
                android:textColorHint="#80FFFFFF"
                android:textColor="#FFFFFF"
                android:backgroundTint="#4DFFFFFF" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="24sp"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp" />

    <ScrollView
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/bank_string_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/bank_total_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="24sp"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp" />

</LinearLayout>